--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <title>SBS Web Gui Issues</title>
+    <title>Issues</title>
     <style>
-    table, th, td {
+    /*table, th, td {
         border: border;
         border-collapse: collapse;
         padding-left: 10px;
@@ -18,15 +18,46 @@
         color:white;
     }
     tr:nth-child(even) {background: #CCC}
-    tr:nth-child(odd) {background: #FFF}
+    tr:nth-child(odd) {background: #FFF}*/
+    @media print {
+        a[href]:after {
+            content: none !important;
+        }
+        .no-print {
+            display: none !important;
+        }
+        .b-print{
+            font-size: 1.4em !important;
+        }
+        .t-print{
+            font-size: 0.8em !important;
+        }
+    }
+    table{
+        font-size: small;
+    }
+    thead{
+        border-top: 2px solid #ddd;
+    }
+    #rightTop{
+        float: right;
+        margin-top: 8px;
+        margin-right: 10px;
+    }
+    #project_h{
+        font-size: 2em;
+    }
     </style>
 </head>
 <body>
-    <div align="right">
-        <button id="c_button" class="btn btn-default btn-xs" onClick="$('#change_project').modal()">Change Project</button>
-        <span id="links"></span>
+    <div>
+        <span id="project_h" class="b-print"></span>
+        <span id="rightTop" class="no-print">
+            <button id="c_button" class="btn btn-default btn-xs" onClick="$('#change_project').modal()">Change Project</button>
+            <span id="links"></span>
+        </span>
     </div>
-    <table width="100%">
+    <table class="table table-striped table-condensed table-hover t-print" width="100%">
         <thead>
             <tr>
                 <th>Number</th>
@@ -58,9 +89,11 @@
               </div>
               <div class="form-group">
                 <select class="form-control" id="project">
+                    <option value="sbsgui">sbsgui</option>
                     <option value="mpro">mpro</option>
                     <option value="cpro">cpro</option>
-                    <option value="sbsgui">sbsgui</option>
+                    <option value="sbsgui">dderl</option>
+                    <option value="sbsgui">imem</option>
                 <select >
                 </select> 
               </div>
@@ -113,9 +146,11 @@
           <div class="modal-body">
             <div class="form-group">
                 <select class="form-control" id="c_project">
+                    <option value="sbsgui">sbsgui</option>
                     <option value="mpro">mpro</option>
                     <option value="cpro">cpro</option>
-                    <option value="sbsgui">sbsgui</option>
+                    <option value="sbsgui">dderl</option>
+                    <option value="sbsgui">imem</option>
                 <select >
             </div>
             <button onclick="change_project()" class="btn btn-default">Submit</button>
@@ -191,6 +226,7 @@
     function show_issues(issues) {
         $('#issues').empty();
         $("table").show();
+        $("#project_h").text(project);
         $("#c_button").show();
         for(var id = 0; id < issues.length; ++id) {
             var fontWeight = "normal";
@@ -199,7 +235,7 @@
             }
             $('#issues').append(
                 $('<tr>').append(
-                    $('<td>').html(issues[id].number).css("font-weight", fontWeight),
+                    $('<td>').html("<a href='"+ issues[id].html_url +"'>" + issues[id].number + "</a>"),
                     $('<td>').html(issues[id].title).css("font-weight", fontWeight),
                     $('<td>').html(issues[id].user.login).css("font-weight", fontWeight),
                     $('<td>').html(issues[id].assignee != null ? issues[id].assignee.login : '').css("font-weight", fontWeight),
