Changed the value for dderl and imeme

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                     <option value="sbsgui">sbsgui</option>
                     <option value="mpro">mpro</option>
                     <option value="cpro">cpro</option>
-                    <option value="sbsgui">dderl</option>
-                    <option value="sbsgui">imem</option>
+                    <option value="dderl">dderl</option>
+                    <option value="imem">imem</option>
                 <select >
                 </select> 
               </div>
@@ -149,8 +149,8 @@
                     <option value="sbsgui">sbsgui</option>
                     <option value="mpro">mpro</option>
                     <option value="cpro">cpro</option>
-                    <option value="sbsgui">dderl</option>
-                    <option value="sbsgui">imem</option>
+                    <option value="dderl">dderl</option>
+                    <option value="imem">imem</option>
                 <select >
             </div>
             <button onclick="change_project()" class="btn btn-default">Submit</button>
