added trpo to the list of project options

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                     <option value="sbsgui">sbsgui</option>
                     <option value="mpro">mpro</option>
                     <option value="cpro">cpro</option>
+                    <option value="tpro">tpro</option>
                     <option value="dderl">dderl</option>
                     <option value="imem">imem</option>
                 <select >
